--- a/src/assets/css/ourcss.css
+++ b/src/assets/css/ourcss.css
@@ -154,6 +154,7 @@ body {
   font-weight: 400;
   text-transform: uppercase;
   transition: all .3s;
+  border-radius: 10px;
 }
 
 .main-button a:hover {
@@ -645,7 +646,7 @@ features
 } 
 
 #features {
-  margin-bottom: 80px;
+  margin-bottom: 10px;
 }
 
 .feature-item {
