--- a/src/assets/css/ourcss.css
+++ b/src/assets/css/ourcss.css
@@ -251,8 +251,8 @@ header
 }
 
 .header-area .main-nav .nav li {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 7px;
+  padding-right: 7px;
 }
 
 .header-area .main-nav .nav li a {
@@ -297,7 +297,7 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #191df0!important;
+  color: red!important;
   opacity: 1;
 }
 
@@ -621,7 +621,7 @@ banner
 .main-banner .caption h2 {
   margin-top: 30px;
   margin-bottom: 25px;
-  font-size: 84px;
+  font-size: 80px;
   text-transform: uppercase;
   font-weight: 800;
   color: #fff;
@@ -644,6 +644,10 @@ features
   float: left;
   margin-right: 30px;
 } 
+
+#k:hover{
+  transform: scale(1.3);
+}
 
 #features {
   margin-bottom: 10px;
@@ -1240,6 +1244,15 @@ responsive
   border-radius: 5px;
   border: 1px solid #eef0ef;
   background-color: white;
+  transition: transform .5s ease;
+  
+}
+
+.courses .course-item:hover{
+
+    transform: scale(1.03);
+  
+  
 }
 
 .courses .course-content {
@@ -1269,6 +1282,7 @@ responsive
   font-size: 14px;
   background: #5fcf80;
   padding: 7px 14px;
+  border-radius: 5px;
   color: #fff;
   margin: 0;
 }
